# bitcoin-whale-tracker

./: makefile  pyproject.toml
backend/: README.md  go.mod  go.sum  makefile
backend/cmd/api/: main.go
backend/internal/database/: db.go  queries.go
backend/internal/server/: routes.go  server.go
dashboard/: README.md  app.py
frontend/: README.md
frontend/whale-dashboard/: package-lock.json  package.json  tailwind.config.ts
frontend/whale-dashboard/src/: app.css
frontend/whale-dashboard/src/components/: Dashboard.svelte  EChartsComponent.svelte  Table.svelte
frontend/whale-dashboard/src/lib/: types.ts
frontend/whale-dashboard/src/lib/api/: fetchCryptoData.ts
frontend/whale-dashboard/src/routes/: +layout.svelte  +page.svelte  Header.svelte
frontend/whale-dashboard/src/routes/data/: +page.server.ts  +page.svelte
frontend/whale-dashboard/src/routes/glossary/: +page.svelte
pipeline/: README.md
pipeline/load/: bitcoin_blocks_pipeline.py  bitcoin_data_pipeline.py  dataframe.py  dune.py  motherduck.py  pyproject.toml
pipeline/transform/: pyproject.toml
