[tool.poetry]
name = "load"
version = "0.1.0"
description = "Data load jobs for bitcoin data"
authors = ["Taylorgtyler <taylorgtyler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dlt = "^1.0.0"
polars = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
